tests/typing/fail/clock-06.stderr
error: clock error: the expression of the true branch in a merge has the base clock
 --> tests/typing/fail/clock-06.rs:9:21
  |
9 |             true => 3.0,
  |                     ^^^
  |
  = help: Try adding ` when c`.
